--- a/themes/myTheme/assets/sass/bestarticles.scss
+++ b/themes/myTheme/assets/sass/bestarticles.scss
@@ -1,5 +1,17 @@
+@import "colors";
+
 .pythonarticles {
-  margin: 100px 0 200px 0;
+  padding: 100px 25px;
+  background-color: $pythonArticles;
+  color: black;
+}
+.pythonarticles > * {
+  max-width: 70ch;
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 2rem 3rem;
 }
 
   .pythonarticles h2 {
@@ -7,9 +19,6 @@
     margin: 0;
   }
 
-  .pythonarticles h2 {
-    font-size: 100%;
-  }
 
     #beginPyList li:first-of-type .summaryTitle {
       margin-top: 40px;
@@ -19,11 +28,18 @@
 li {
   text-align: left;
 }
+// todo wrap content in divs so that i can do background colors across the whole width
+// todo sidebar the best articles, simple dividing line between
 
-
-  #contentList {
-    text-align: center;
+  #contentList > * {
+    max-width: 70ch;
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 2rem 3rem;
   }
+
 
   #articlelist {
     padding-right: 15px;
