--- a/themes/myTheme/assets/sass/headerfooter.scss
+++ b/themes/myTheme/assets/sass/headerfooter.scss
@@ -4,6 +4,7 @@
 body {
   font-family: Helvetica, sans-serif;
   font-size: 140%;
+  background-color: #f5f5f5;
 
 }
 
@@ -11,14 +12,13 @@ header {
   padding: 1rem;
 }
 main {
-  width: 80vw;
   text-align: center;
-  margin: 5vh auto 0 auto;
-  @include media('>tablet') {
-    width: 70vw;
-
-
-  }
+  margin: 5vh;
+  //@include media('>tablet') {
+  //  width: 70vw;
+  //
+  //
+  //}
 }
 
 
